--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "moment": "^2.30.1",
     "nuxt": "^3.12.3",
     "object-to-formdata": "^4.5.1",
     "pinia": "^2.1.7",
