--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "nuxt-app",
+  "description": "Drag and drop deck builder",
   "private": true,
   "type": "module",
+  "version": "0.1.0",
+  "author": "George Ilias",
   "main": "dist-electron/main.js",
   "overrides": {
     "vue": "latest"
@@ -21,13 +24,22 @@
       "output": "dist"
     },
     "files": [
-      "main.js",
-      "index.html",
-      "package.json",
-      "src/**/*"
+      "dist-electron/main.js",
+      "pages/index.vue",
+      "package.json"
     ],
     "win": {
-      "target": "nsis"
+      "target": [
+        "nsis",
+        "zip"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
     },
     "mac": {
       "target": "dmg"
